# sabitax-backend

./: .env.example  .gitignore  BACKEND_API_ENDPOINTS.md  Dockerfile  FILE_STRUCTURE.md  README.md  main.py  pyproject.toml  verify_integrations_standalone.py
alembic/: env.py
alembic/versions/: c5417e9d4281_initial_migration.py
app/: __init__.py  config.py  database.py
app/api/: deps.py
app/api/v1/: __init__.py  auth.py  banks.py  chat.py  notifications.py  referrals.py  router.py  sabitax_ai.py  subscriptions.py  tax.py  tin.py  transactions.py  users.py
app/core/: __init__.py  exceptions.py  security.py  utils.py
app/models/: __init__.py  bank_account.py  base.py  chat.py  notification.py  referral.py  subscription.py  tax.py  tin.py  transaction.py  user.py
app/repositories/: __init__.py  bank_repo.py  chat_repo.py  notification_repo.py  referral_repo.py  subscription_repo.py  tax_repo.py  tin_repo.py  transaction_repo.py  user_repo.py
app/schemas/: __init__.py  auth.py  bank.py  chat.py  notification.py  referral.py  subscription.py  tax.py  tin.py  transaction.py  user.py  wrapped.py
app/services/: __init__.py  auth_service.py  bank_service.py  chat_service.py  notification_service.py  referral_service.py  sabitax_ai_service.py  subscription_service.py  tax_service.py  tin_service.py  transaction_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_integrations.py  test_referrals.py  test_tax.py  test_users.py
